0x0A-python-inheritance/tests/7-base_geometry.txt
The ``7-base_geometry`` module
======================

Using ``BaseGeometry``
-------------------

This is an example text file in reStructuredText format.  First import
``BaseGeometry`` from the ``7-base_geometry`` module:

	>>> BaseGeometry = __import__('7-base_geometry').BaseGeometry
	>>> area = BaseGeometry.area
	>>> integer_validator = BaseGeometry.integer_validator
	>>> mod_docs = __import__('7-base_geometry').__doc__
	>>> class_docs = BaseGeometry.__doc__
	>>> area_docs = area.__doc__
	>>> int_docs = integer_validator.__doc__
	>>> len(mod_docs) > 0
	True
	>>> len(class_docs) > 0
	True
	>>> len(area_docs) > 0
	True
	>>> len(int_docs) > 0
	True
	>>> bg = BaseGeometry()
	>>> bg.area()
	Traceback (most recent call last):
	Exception: area() is not implemented
	>>> bg.area(1,2,3)
	Traceback (most recent call last):
	TypeError: BaseGeometry.area() takes 1 positional argument but 4 were given
	>>> bg.integer_validator()
	Traceback (most recent call last):
	TypeError: BaseGeometry.integer_validator() missing 2 required positional arguments: 'name' and 'value'
	>>> bg.integer_validator("hello")
	Traceback (most recent call last):
	TypeError: BaseGeometry.integer_validator() missing 1 required positional argument: 'value'
	>>> bg.integer_validator("hello", 1, 100)
	Traceback (most recent call last):
	TypeError: BaseGeometry.integer_validator() takes 3 positional arguments but 4 were given
	>>> bg.integer_validator("distance", 10)
	>>> bg.integer_validator("bool", False)
	Traceback (most recent call last):
	TypeError: bool must be an integer
	>>> bg.integer_validator("my_int", 12)
	>>> bg.integer_validator("width", 89)
	>>> bg.integer_validator("name", "John")
	Traceback (most recent call last):
	TypeError: name must be an integer
	>>> bg.integer_validator("age", 0)
	Traceback (most recent call last):
	ValueError: age must be greater than 0
	>>> bg.integer_validator("distance", -4)
	Traceback (most recent call last):
	ValueError: distance must be greater than 0
	>>> bg.integer_validator("my_int", 12)
	>>> bg.integer_validator("width", 89)
	>>>
	>>> try:
	...     bg.integer_validator("name", "John")
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	...
	[TypeError] name must be an integer
	>>> try:
	...     bg.integer_validator("age", 0)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	...
	[ValueError] age must be greater than 0
	>>> try:
	...     bg.integer_validator("distance", -4)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	...
	[ValueError] distance must be greater than 0
	>>> try:
	...     bg.integer_validator("name", 3.5)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	...
	[TypeError] name must be an integer
	>>> try:
	...     bg.integer_validator(34, 0)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	...
	[ValueError] 34 must be greater than 0
	>>> try:
	...     bg.integer_validator("distance", -4)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	...
	[ValueError] distance must be greater than 0
	>>> try:
	...     bg.integer_validator("distance", 100)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	...
	>>> bg = BaseGeometry("leo")
	Traceback (most recent call last):
	...
	TypeError: BaseGeometry() takes no arguments
	>>> bg = BaseGeometry(23)
	Traceback (most recent call last):
	...
	TypeError: BaseGeometry() takes no arguments
	>>> bg = BaseGeometry()
	>>> try:
	...     bg.integer_validator(24, 24)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	... 
	>>> try:
	...     bg.integer_validator("leo", 24)
	... except Exception as e:
	...     print("[{}] {}".format(e.__class__.__name__, e))
	... 
	>>>
